Hotfix/optimization (#22)
* Update DataGenerator.java

* Update DriverLoader.java

* Update SeedDatabaseAction.java

* Update ConnectionConfigPersistence.java

* Update SchemaIntrospector.java

* Update SqlGenerator.java

* Update TopologicalSorter.java

* Update Table.java

* Update DriverShim.java

* Update SeedDialog.java

* Update ColumnDefinition.java

* Update SchemaDsl.java

* Update DriverSelectionDialog.java

* Update PkUuidSelectionDialog.java

* Update DriverRegistry.java

* Update ForeignKey.java

* Update SchemaDesigner.java

* Update GenerateSeedAction.java

* Update DataGenerator.java

* Update SeedDialog.java

* Update plugin.xml

* Create DriverInitializationException.java

* Create DriverLoadingException.java

* Update SeedDatabaseAction.java

* Update plugin.xml

* Update plugin.xml

* Formatting.

* Tests

* Tests

* Update ModelTest.java